<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/e4"
    android:orientation="vertical" >

    <include layout="@layout/head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/px_20"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/call_vip"
            android:textColor="@color/call_textColor"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/call_vip_address"
            android:textColor="@color/call_textColor"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
             >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/call_vip_phone_hint"
                android:textColor="@color/call_textColor"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/call_vip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/call_vip_phone"
                android:textColor="@drawable/call_select"
                android:textSize="13sp"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/line_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/call_south"
            android:textColor="@color/call_textColor"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/call_south_address"
            android:textColor="@color/call_textColor"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/call_vip_phone_hint"
                android:textColor="@color/call_textColor"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/call_south"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/call_south_phone"
                android:textColor="@drawable/call_select"
                android:textSize="13sp"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/line_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/call_north"
            android:textColor="@color/call_textColor"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/call_north_address"
            android:textColor="@color/call_textColor"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/call_vip_phone_hint"
                android:textColor="@color/call_textColor"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/call_north"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/call_north_phone"
                android:textColor="@drawable/call_select"
                android:textSize="13sp"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/line_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/call_cdu"
            android:textColor="@color/call_textColor"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/call_cdu_address"
            android:textColor="@color/call_textColor"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/call_vip_phone_hint"
                android:textColor="@color/call_textColor"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/call_cdu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="@string/call_cdu_phone"
                android:textColor="@drawable/call_select"
                android:textSize="13sp"
                android:textStyle="italic" />
        </LinearLayout>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            />
    </LinearLayout>
    
    <include layout="@layout/line_head"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <ImageView
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/call" />
    </LinearLayout>
</LinearLayout>