<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efeff4"
    android:orientation="vertical" >

    <include layout="@layout/head" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/my_car_manager"
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:background="@drawable/home_my_car_select" >

                <com.wancheda.view.RoundImageView
                    android:id="@+id/my_image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/zhiyan" />

                <TextView
                    android:id="@+id/my_car_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/my_image"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="18dp"
                    android:layout_toRightOf="@id/my_image"
                    android:text="@string/my_car_hint"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/my_car_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/my_image"
                    android:layout_alignLeft="@+id/my_car_type"
                    android:layout_marginBottom="12dp"
                    android:layout_marginRight="10dp"
                    android:text="1750公里"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/my_car_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/my_car_type"
                    android:layout_alignBottom="@+id/my_car_type"
                    android:layout_alignParentRight="true"
                    android:text="2015H7 2.0T 四驱豪华型"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/my_car_late"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/my_car_distance"
                    android:layout_alignBottom="@+id/my_car_distance"
                    android:layout_alignParentRight="true"
                    android:text="上一次时间：2015-07-24"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/right_arrow" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/my_order"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_172"
                android:layout_marginTop="20dp"
                android:background="@drawable/white_select" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/order_default"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/my_order"
                    android:textColor="@color/my_textColor"
                    android:textSize="19sp" />

                <ImageView
                    android:id="@+id/iv_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/px_81"
                    android:src="@drawable/right_arrow_small" />

                <TextView
                    android:id="@+id/my_order_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="30dp"
                    android:layout_toLeftOf="@id/iv_hint"
                    android:gravity="center"
                    android:text="@string/my_order_hint"
                    android:textColor="@color/my_textColor"
                    android:textSize="14sp" />
            </RelativeLayout>

            <include layout="@layout/line_gray" />

            <RelativeLayout
                android:id="@+id/my_account"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_172"
                android:background="@drawable/white_select" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/my_account"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/my_account"
                    android:textColor="@color/my_textColor"
                    android:textSize="19sp" />

                <ImageView
                    android:id="@+id/iv_hint1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/px_81"
                    android:src="@drawable/right_arrow_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/iv_hint1"
                    android:gravity="center"
                    android:text="@string/my_address"
                    android:textColor="@color/my_textColor"
                    android:textSize="14sp" />
            </RelativeLayout>

            <include layout="@layout/line_gray" />

            <RelativeLayout
                android:id="@+id/my_adjust"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_172"
                android:background="@drawable/white_select" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/my_adjust"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/my_adjust"
                    android:textColor="@color/my_textColor"
                    android:textSize="19sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/px_81"
                    android:src="@drawable/right_arrow_small" />
            </RelativeLayout>

            <include layout="@layout/line_gray" />

            <RelativeLayout
                android:id="@+id/my_setting"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_172"
                android:background="@drawable/white_select" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:drawableLeft="@drawable/my_setting"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/my_setting"
                    android:textColor="@color/my_textColor"
                    android:textSize="19sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/px_81"
                    android:src="@drawable/right_arrow_small" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_172"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/my_help"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/my_button_dr_select"
                    android:gravity="center"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:text="@string/my_help"
                    android:textColor="#b5b5b5" 
                    android:textSize="19sp"/>

                <Button
                    android:id="@+id/my_call"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/my_button_dr_select"
                    android:gravity="center"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:text="@string/my_call"
                    android:textColor="#b5b5b5"
                    android:textSize="19sp" />
            </LinearLayout>
            
            <Button
                    android:id="@+id/my_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp"
                    android:text="@string/my_service"
                    android:textColor="@drawable/my_service" 
                    android:textSize="19sp"/>
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>