<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#fff"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >
            </FrameLayout>

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />
            <include layout="@layout/line_red"/>
            <LinearLayout
                android:id="@+id/mainbottom"
                android:layout_width="fill_parent"
                android:layout_height="55dip"
                android:background="#f8f8f8"
                android:paddingTop="5dip" >

                <FrameLayout style="@style/main_tab_but_linear" >

                    <LinearLayout
                        android:id="@+id/channel3"
                        style="@style/main_tab_but_linear" >

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/home_click" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tab_main"
                            android:textColor="#838992"
                            android:textSize="12sp" 
                            android:layout_marginTop="2dp"/>
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout style="@style/main_tab_but_linear" >

                    <LinearLayout
                        android:id="@+id/channel1"
                        style="@style/main_tab_but_linear" >

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/order_default" />

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tab_order"
                            android:textColor="#838992"
                            android:textSize="12sp"
                            android:layout_marginTop="2dp" />
                    </LinearLayout>
                  
                </FrameLayout>

                <FrameLayout style="@style/main_tab_but_linear" >

                    <LinearLayout
                        android:id="@+id/channel2"
                        style="@style/main_tab_but_linear" >

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/my_default" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tab_my"
                            android:textColor="#838992"
                            android:textSize="12sp"
                            android:layout_marginTop="2dp" />
                    </LinearLayout>

                   
                </FrameLayout>

                <FrameLayout style="@style/main_tab_but_linear" >

                    <LinearLayout
                        android:id="@+id/channel4"
                        style="@style/main_tab_but_linear" >

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/call_default" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tab_call"
                            android:textColor="#838992"
                            android:textSize="12sp"
                            android:layout_marginTop="2dp"/>
                    </LinearLayout>
                </FrameLayout>
               
            </LinearLayout>
            
        </LinearLayout>
    </TabHost>

</RelativeLayout>